VoxelGame-Android-Client/app/.cxx/Debug/1v2e9575/armeabi-v7a/android_gradle_build_stdout_native-lib_armeabi-v7a.txt
ninja: Entering directory `F:\VSProjects\VoxelGame-Android-Client\app\.cxx\Debug\1v2e9575\armeabi-v7a'
[1/2] Building CXX object CMakeFiles/native-lib.dir/NativeLib.cpp.o
FAILED: CMakeFiles/native-lib.dir/NativeLib.cpp.o 
C:\Users\1weir\AppData\Local\Android\Sdk\ndk\25.2.9519653\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=armv7-none-linux-androideabi29 --sysroot=C:/Users/1weir/AppData/Local/Android/Sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/windows-x86_64/sysroot -Dnative_lib_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -std=c++17 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/native-lib.dir/NativeLib.cpp.o -MF CMakeFiles\native-lib.dir\NativeLib.cpp.o.d -o CMakeFiles/native-lib.dir/NativeLib.cpp.o -c F:/VSProjects/VoxelGame-Android-Client/app/src/main/cpp/NativeLib.cpp
F:/VSProjects/VoxelGame-Android-Client/app/src/main/cpp/NativeLib.cpp:84:52: error: no matching function for call to 'eglGetDisplay'
        surface = eglCreateWindowSurface(display, config, eglGetDisplay(), NULL);
                                                          ^~~~~~~~~~~~~
C:/Users/1weir/AppData/Local/Android/Sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/EGL/egl.h:133:31: note: candidate function not viable: requires single argument 'display_id', but no arguments were provided
EGLAPI EGLDisplay EGLAPIENTRY eglGetDisplay (EGLNativeDisplayType display_id);
                              ^
F:/VSProjects/VoxelGame-Android-Client/app/src/main/cpp/NativeLib.cpp:84:12: error: no matching function for call to 'eglCreateWindowSurface'
        surface = eglCreateWindowSurface(display, config, eglGetDisplay(), NULL);
                  ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/1weir/AppData/Local/Android/Sdk/ndk/25.2.9519653/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include/EGL/egl.h:126:31: note: candidate function not viable: cannot convert argument of incomplete type 'EGLDisplay' (aka 'void *') to 'EGLNativeWindowType' (aka 'ANativeWindow *') for 3rd argument
EGLAPI EGLSurface EGLAPIENTRY eglCreateWindowSurface (EGLDisplay dpy, EGLConfig config, EGLNativeWindowType win, const EGLint *attrib_list);
                              ^
F:/VSProjects/VoxelGame-Android-Client/app/src/main/cpp/NativeLib.cpp:88:3: error: use of undeclared identifier 'ANDROID_LOG_WARN'
                LOGW("Unable to eglMakeCurrent");
                ^
F:/VSProjects/VoxelGame-Android-Client/app/src/main/cpp/NativeLib.cpp:41:46: note: expanded from macro 'LOGW'
#define LOGW(...) ((void)__android_log_print(ANDROID_LOG_WARN, "AndroidProject1.NativeActivity", __VA_ARGS__))
                                             ^
3 errors generated.
ninja: build stopped: subcommand failed.
